--- a/securecoding/src/main/resources/templates/1/1.1.html
+++ b/securecoding/src/main/resources/templates/1/1.1.html
@@ -6,12 +6,10 @@
 <body>
 <!-- Navigation -->
 <nav th:replace="fragments/nav :: nav"></nav>
-<!-- Header-->
-<head th:replace="fragments/header :: header"></head>
 <!-- Section -->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">1. SQL 삽입</h4>
+    <h3 class="fw-bolder" style="text-align: center">1. SQL 삽입</h3>
     <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -21,9 +19,9 @@
         <hr />
             <br />
             <div align="right">
-                <form th:action="@{/board}" method="get">
+                <form th:action="@{/board/vuln}" method="get">
                     <button class="btn" style="float:right; background-color: #ffe74a; margin-left: 2%" type="submit">찾기</button>
-                    <input type="text" name="keyword" class="form-control" style="width: 200px; margin-right: 2%"/>
+                    <input type="text" name="keyword" class="form-control" placeholder="검색어를 입력해주세요" style="width: 200px; margin-right: 2%"/>
                 </form>
             </div>
             <br />
@@ -49,9 +47,38 @@
                 <tfoot>
                 </tfoot>
             </table>
+<!--            <div th:each="page:${#numbers.sequence(startPage, endPage)}" >-->
+<!--                <a th:if="${page != nowPage}" th:href="@{/board/(page=${page-1})}" th:text="${page}"></a>-->
+<!--                <strong th:if="${page == nowPage}" th:text="${page}" style="color: #ffe74a"></strong>-->
+<!--            </div>-->
+<!--            <div class="pagination justify-content-center">-->
+<!--                <a th:href="@{/board/{page} (page = ${startPage})}" role="button" class="btn-lg bi bi-caret-left-square-fill" style="color: #2E2E2E"></a>-->
+<!--                <a th:href="@{/board/{page} (page = ${startPage})}" role="button" class="btn-lg bi bi-caret-right-square-fill" style="color: #2E2E2E"></a>-->
+<!--            </div>-->
+
+<!--            <nav aria-label="Page navigation example" style="margin-left: 30%; margin-top: 5%">-->
+<!--                <ul class="pagination">-->
+<!--                    <li class="page-item">-->
+<!--                        <a class="page-link" th:if="${page > 1}" th:href="@{/boards (page=${page - 1})}" aria-label="Previous">-->
+<!--                            <span aria-hidden="true" style="color: #2E2E2E">&laquo;</span>-->
+<!--&lt;!&ndash;                            <span class="sr-only">Previous</span>&ndash;&gt;-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item"><a class="page-link" th:href="@{/boards (page=${page})}" style="color: #2E2E2E">1</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" th:if="${(page) * 10 < size}" th:text="${page + 1}" style="color: #2E2E2E">2</a></li>-->
+<!--                    <li class="page-item"><a th:if="${(page + 1) * 10 < size}" style="color:black" th:text="${page + 2}" th:href="@{/boards (page=${page + 2})}">3</a></li>-->
+<!--                    <li class="page-item"><a th:if="${(page + 2) * 10 < size}" style="color:black" th:text="${page + 3}" th:href="@{/boards (page=${page + 3})}">4</a></li>-->
+<!--                    <li class="page-item"><a th:if="${(page + 3) * 10 < size}" style="color:black" th:text="${page + 4}" th:href="@{/boards (page=${page + 4})}">5</a></li>-->
+<!--                    <li class="page-item">-->
+<!--                        <a class="page-link" th:if="${page * 10 < size}" th:href="@{/boards (page=${page + 1})}" aria-label="Next">-->
+<!--                            <span aria-hidden="true" style="color: #2E2E2E">&raquo;</span>-->
+<!--&lt;!&ndash;                            <span class="sr-only">Next</span>&ndash;&gt;-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </nav>-->
             <br />
             <a href="#" th:if="${session.memberInfo != null}" th:href="@{/board/new}" class="btn" style="text-align: left; background-color: #ffe74a;">글쓰기</a>
-            <br />
             <br />
             <br />
             <div class="card h-100">
@@ -64,9 +91,9 @@
             <hr />
             <br />
             <div align="right">
-                <form th:action="@{/board}" method="get">
+                <form th:action="@{/board/secure}" method="get">
                     <button class="btn" style="float:right; background-color: #ffe74a; margin-left: 2%" type="submit">찾기</button>
-                    <input type="text" name="keyword" class="form-control" style="width: 200px; margin-left: 2%"/>
+                    <input type="text" name="keyword" class="form-control" placeholder="검색어를 입력해주세요" style="width: 200px; margin-left: 2%"/>
                 </form>
             </div>
             <br />
@@ -92,9 +119,34 @@
                 <tfoot>
                 </tfoot>
             </table>
+<!--            <div th:each="page:${#numbers.sequence(startPage, endPage)}" >-->
+<!--                <a th:if="${page != nowPage}" th:href="@{/board/(page=${page-1})}" th:text="${page}"></a>-->
+<!--                <strong th:if="${page == nowPage}" th:text="${page}" style="color: #ffe74a"></strong>-->
+<!--            </div>-->
+<!--            <div class="pagination justify-content-center">-->
+<!--                <a th:href="@{/board/{page} (page = ${startPage})}" role="button" class="btn-lg bi bi-caret-left-square-fill" style="color: #2E2E2E"></a>-->
+<!--                <a th:href="@{/board/{page} (page = ${startPage})}" role="button" class="btn-lg bi bi-caret-right-square-fill" style="color: #2E2E2E"></a>-->
+<!--            </div>-->
+<!--            <nav aria-label="Page navigation example" style="margin-left: 30%; margin-top: 5%">-->
+<!--                <ul class="pagination">-->
+<!--                    <li class="page-item">-->
+<!--                        <a class="page-link" href="#" aria-label="Previous">-->
+<!--                            <span aria-hidden="true" style="color: #2E2E2E">&laquo;</span>-->
+<!--                            &lt;!&ndash;<span class="sr-only">Previous</span>&ndash;&gt;-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#" style="color: #2E2E2E">1</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#" style="color: #2E2E2E">2</a></li>-->
+<!--                    <li class="page-item">-->
+<!--                        <a class="page-link" href="#" aria-label="Next">-->
+<!--                            <span aria-hidden="true" style="color: #2E2E2E">&raquo;</span>-->
+<!--                            &lt;!&ndash;<span class="sr-only">Next</span>&ndash;&gt;-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </nav>-->
             <br />
             <a href="#" th:if="${session.memberInfo != null}" th:href="@{/board/new}" class="btn" style="text-align: left; background-color: #ffe74a;">글쓰기</a>
-            <br />
             <br />
             <br />
             <div class="card h-100">
