--- a/securecoding/src/main/resources/templates/1/1.1.code.html
+++ b/securecoding/src/main/resources/templates/1/1.1.code.html
@@ -188,7 +188,7 @@ public interface BoardRepository extends JpaRepository<Board, Long> {
       </div>
     </div>
       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/1/1}">실습 하기</a></div>
+          <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/board}">실습 하기</a></div>
       </div>
   </div>
 </section>
