--- a/securecoding/src/main/resources/templates/1/1.5.html
+++ b/securecoding/src/main/resources/templates/1/1.5.html
@@ -26,6 +26,9 @@
               <!-- Vulnerable code -->
               <textarea readonly class="area" th:text="${line}"></textarea>
             </div>
+            <br />
+            <div class="card h-100">
+            </div>
           </form>
       </div>
       <div class="col mb-5" style="width: 40%; height: 200%">
@@ -39,6 +42,9 @@
             <div class="card h-100">
               <!-- Secure Code -->
               <textarea readonly class="area" th:text="${line2}"></textarea>
+            </div>
+            <br />
+            <div class="card h-100">
             </div>
           </form>
       </div>
