--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -44,6 +44,7 @@
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
         <form action="/1/6/secure" method="post" th:object="${form}" enctype="multipart/form-data">
+            <input type="hidden" th:name="_csrf" th:value="${session.CSRF_TOKEN}" />
             <div class="form-group">
                 <label th:for="subject" style="margin-bottom: 2%; color: #2E2E2E">제목</label>
                 <input type="text" th:field="*{subject}" class="form-control" style="height: 45px" />
