--- a/securecoding/src/main/resources/templates/board/updateBoardForm_vuln.html
+++ b/securecoding/src/main/resources/templates/board/updateBoardForm_vuln.html
@@ -6,12 +6,10 @@
 <body>
 <!-- Navigation -->
 <nav th:replace="fragments/nav :: nav"></nav>
-<!-- Header-->
-<head th:replace="fragments/header :: header"></head>
 <!-- Section -->
 <div class="container" style="width: 50%; margin: 0 auto">
   <h4 style="font-weight: 500; text-align: center; margin-top: 5%">게시글 수정하기</h4>
-  <form th:object="${form}" method="post" style="margin-top: 5%">
+  <form th:object="${form}" th:action="@{/board/update/{boardId}/vuln (boardId=${boardId})}" method="post" style="margin-top: 5%">
     <div class="form-group" style="margin-bottom: 2%">
       <label th:for="subject" style="margin-bottom: 2%">제목</label>
       <input type="text" th:field="*{subject}" class="form-control"/>
